# uhelper

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_project.py  test_structure.py  Паспорт ИВР _2025.md
docs/: DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN4AGENTS.md  PRODUCTION_RELEASE_PLAN.md
src/: bot.py  config.py
src/agents/: base_agent.py  orchestrator.py  profile_analyzer_agent.py  university_data_agent.py
src/models/: base.py
src/utils/: logging_config.py
tests/: conftest.py  test_agents.py
