[project]
name = "uhelper"
version = "0.1.0"
description = "AI-ассистент для помощи в поступлении в университет"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "ty>=0.0.15",
]

[tool.uv]
cache-dir = ".uv-cache"
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "ty>=0.0.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty]

[tool.ty.environment]
python-version = "3.12"
root = ["./"]
extra-paths = ["./", "./src"]
